--- a/app/views/teachers/help.html.erb
+++ b/app/views/teachers/help.html.erb
@@ -15,13 +15,29 @@
  <!--提出機能エリア-->  
   <button id="movieDocumentBtn" class="btn  btn-primary movie_button">提出機能説明 ▼</button>
   <div id="movie_document">
+
+  <!--提出動画1 -->
     <div class="video">
       <div class="text-center text-danger video-div">
        <h3>1.書類作成の際の外部サービスのリンクの取得について説明します。</h3>
       </div><br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/bhSad7RWkl0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
+  <!--提出動画2 -->
+    <div class="video">
+      <div class="text-center text-danger video-div">
+       <h3>2.学校にて配布された書類のwebでの開示の方法</h3>
+      </div><br>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/UzhOQ9yr0cY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+
   </div>
+
+
+
+  
 
   <!--その他機能エリア-->  
   <button id="movieOtherBtn" class="btn  btn-primary movie_button">その他機能説明 ▼</button>
