--- a/app/assets/stylesheets/documents2.scss
+++ b/app/assets/stylesheets/documents2.scss
@@ -126,6 +126,7 @@
   color: #000099;
   font-weight: 300;
   font-family: 'M PLUS Rounded 1c', sans-serif;
+  margin-top: 5%;
   letter-spacing: 8px;
 }
 .document_teacher_index_table_phone{display: none;}
@@ -152,7 +153,7 @@
  .document_span_pc_response{font-size: 24px;}
  .document_span_phone_response{display: none;}
  
-/* --- smart-phone ----*/
+/* --- スマートフォン --------------------------------------------------------------------------------------------------*/
 @media screen and (max-width:767px){
     #document_form_pc_button{display:none;}
     #document_hyouji_title,#document_hyouji_title2,#document_hyouji_title3{
@@ -177,8 +178,9 @@
       width: 30%;
       font-size: 8px;
       font-weight: bold;
-      padding:12px;
-      margin-bottom: 20%;
+      padding: 12% 1%;
+      height: 100%;
+      margin-bottom: 12%;
     }
     #document_explain_span{
       font-size: 10px;
@@ -204,7 +206,7 @@
   font-family: 'M PLUS Rounded 1c', sans-serif;
   max-width: 100%;
   margin-left: 2%;
-  margin-bottom: -20%;
+  margin-bottom: -12%;
   text-align: center;
   }
   .document_index_back_btn2{display: none;}
