選択式動画配置

--- a/app/views/document_items/new.html.erb
+++ b/app/views/document_items/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:item_url,document_item_create_path(@document)) %>
-<ol class="stepBar">STEP
+<ol class="stepBar">
   <li class="visited"><span>1</span><br>書類の概要作成<label style="color:red">(済み)</label></li>
   <li class="visited"><span>2</span><br>質問項目作成</li>
   <li><span>3</span><br>選択肢作成</li>
