--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,7 +1,7 @@
 <%= provide(:url,documents_path) %>
 <div>
 
-<ol class="stepBar">STEP
+<ol class="stepBar">
   <li class="visited"><span>1</span><br>書類の概要作成</li>
   <li><span>2</span><br>質問項目作成</li>
   <li><span>3</span><br>選択肢作成</li>
