--- a/app/views/teachers/help.html.erb
+++ b/app/views/teachers/help.html.erb
@@ -27,13 +27,23 @@
   <!--提出動画2 -->
     <div class="video">
       <div class="text-center text-danger video-div">
+       <h3>2.選択肢タイプの資料作成</h3>
+      </div><br>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/0ir-Kaau0f8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+
+
+  <!--提出動画3 -->
+    <div class="video">
+      <div class="text-center text-danger video-div">
        <h3>2.入力タイプの資料作成</h3>
       </div><br>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/7R-5azE5zZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
-    <!--提出動画3 -->
+    <!--提出動画4 -->
     <div class="video">
       <div class="text-center text-danger video-div">
        <h3>3.学校にて配布された書類のwebでの開示の方法</h3>
