--- a/app/views/documents/new2.html.erb
+++ b/app/views/documents/new2.html.erb
@@ -1,7 +1,7 @@
 <!--モーダル-->
 <div id= "input-first" class= "modal fade" role = "dialog" tabindex = "-1" aria-hidden = "true" ></div>
 <%= provide(:url,document_create2_path ) %>
-<ol class="stepBar">STEP
+<ol class="stepBar">
   <li class="visited"><span>1</span><br>書類の概要作成</li>
   <li><span>2</span><br>質問項目作成</li>
 </ol>
