LINE友だち追加ボタン

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,6 +11,12 @@
     }
   }
 }
+
+.line-friend {
+  text-align: center;
+  margin-bottom: 3%;
+}
+
 /* user show */
 .user_show_title{
   font-size: 32px;
@@ -49,7 +55,7 @@
   font-weight: bold;
   font-size: 16px;
   margin-left: -40%;
-  
+
 }
 .user_link_icon:hover{
   background-color: cyan;
@@ -194,7 +200,7 @@
     margin-left:-10%;
     width: 100%;
   }
-  
+
   .box_title{
     max-width: 100%;
   }
@@ -260,7 +266,7 @@
     width: 100%;
     margin-top: 0%;
     margin-bottom: 10%;
-   
-    
+
+
   }
 }
