--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -10,10 +10,10 @@
   <% end %>
 </div>
    <label class="teacher_menu_title">メニュー</label>
-    <div class="col-md-9 col-md-offset-2">
+    <div class="col-md-9 col-md-offset-2" style="padding-bottom:6%;">
      <div class="row teacher_row">
-    <div class="container">
-      <div class="row" style="background:none">
+    <div class="container" >
+      <div class="row" style="background:none;">
 
         <div class="col-md-1 col-xs-6 col-md-offset-1">
            <%= link_to  teacher_meetings_new_path(@teacher) ,id:"teacher_bt" do %>
@@ -102,7 +102,7 @@
     </div>
    </div>
    </div>
-
+   
 
 <style>
  body{
