保護者新規レイアウト

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -72,6 +72,18 @@
   margin-bottom: 3%;
 
 }
+/*保護者新規登録 */
+.meeting-top-title{
+  color:#3333FF;
+
+}
+.new_user_label{
+  background: #0000CD;
+  border-left: 4px solid #FF0000;
+  color: #fffeee;
+  padding: 2px 10% 2px 10px;
+  margin-bottom: 3%;
+}
 
 /* user show */
 /* 生徒登録/編集ページ */
