--- a/app/views/document_items/new2.html.erb
+++ b/app/views/document_items/new2.html.erb
@@ -1,4 +1,6 @@
 <% provide(:item_url,document_item_create2_path(@document))%>
+<%= provide(:title, "入力式作成ページ2") %>
+
 <ol class="stepBar">
   <li class="visited"><span>1</span><br>書類の概要作成<label style="color:red">(済み)</label></li>
   <li class="visited"><span>2</span><br>質問項目作成</li>
