--- a/app/views/documents/new2.html.erb
+++ b/app/views/documents/new2.html.erb
@@ -1,3 +1,5 @@
+<%= provide(:title,"入力式作成ページ1") %>
+
 <!--モーダル-->
 <div id= "input-first" class= "modal fade" role = "dialog" tabindex = "-1" aria-hidden = "true" ></div>
 <%= provide(:url,document_create2_path ) %>
