--- a/app/views/documents/new3.html.erb
+++ b/app/views/documents/new3.html.erb
@@ -1,4 +1,6 @@
 <%= provide(:url,document_create3_path) %>
+<%= provide(:title,"表示式作成ページ1") %>
+
 <div id= "pdf" class= "modal fade" role = "dialog" tabindex = "-1" aria-hidden = "true" ></div>
 
 <div class="text-center text-default">
