--- a/app/views/documents/user_view.html.erb
+++ b/app/views/documents/user_view.html.erb
@@ -1,3 +1,5 @@
+<%= provide(:title, "提出確認") %>
+
 <div id="document_answer_reply" class="modal fade" role="dialog" tabindex="-1" areahidden="true" style="width:80%;margin-left:10%;"></div>
 
 <div class="text-center">
