--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,6 +1,5 @@
+<%=provide(:title,"メニュー") %>
 <div id="meeting-top-title" class="title_font meeting-top-title">教員トップページ</div>
-
-
 <div class="box_srcollbar">
   <div class="box_title"><span style="color:#a0a0a0;"><i class="fas fa-phone">&emsp;</span></i>保護者からのお問い合わせ</div>
   <% @p_messages.each do |p_message| %>
