保護者編集ページレイアウト

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:button_text, '新規作成') %>
+<% provide(:title, '新規作成') %>
 
 <div id="meeting-top-title" class="meeting-top-title"><i class="fas fa-user-plus"></i><span style="color:#2C7CFF">保護者新規登録</span></div>
 
