--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 
      <div class= "col-md-2 col-xs-3 col-md-offset-1 col-xs-offset-2">
        <%= link_to  edit_user_path(@user), style:"text-decoration: none;" do %>
-         <span class="user_link_icon"><i class="fas fa-user"></i></span>
+         <span class="user_link_icon"><i class="fas fa-user-edit"></i></span>
          <div class="user_icon_title">保護者情報編集</div>
        <% end %>
      </div>
