--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,25 @@
 <% provide(:button_text, '更新') %>
+<% provide(:title, "#{@user.name}さん編集") %>
 
-<div id="meeting-top-title"><%= @user.name + @user.name2 %>さんの情報編集</div>
+<div id="meeting-top-title" style="color:blue;"><i class="fas fa-user-edit"></i>&emsp;<%= @user.name + @user.name2 %>さんの情報編集</div>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class="row" style="background:none;">
+  <div class="col-md-8 col-md-offset-2">
     <%= render "user_form" %>
   </div>
 </div>
+
+<style>
+  body{
+    background:#e0e0e0;
+  }
+  .col-md-8{
+    background:#fffeee;
+    padding:3% 8%;
+    border-radius:6px;
+    box-shadow:-1px 2px 3px 5px #d0d0d0;
+  }
+  .form-control{
+    margin-bottom: 3%;
+  }
+</style>
