--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -50,6 +50,24 @@
   color: cyan;
 }
 
+/* 個別連絡 */
+.message {
+  width: 50%;
+  margin: auto;
+}
+
+.message-top {
+  position: relative;
+  padding: 0.25em 0;
+}
+.message-top:after {
+  content: "";
+  display: block;
+  height: 4px;
+  background: -webkit-linear-gradient(to right, rgb(230, 90, 90), transparent);
+  background: linear-gradient(to right, rgb(230, 90, 90), transparent);
+}
+
 /* teacher-top*/
 .box_srcollbar {
   overflow:auto;
@@ -140,15 +158,15 @@
 }
 #movie_meeting{ /*面談動画エリア*/
   display: none;
-  
+
 }
 #movie_document{ /*提出動画エリア*/
   display: none;
-  
+
 }
 #movie_other{ /*その他動画エリア*/
   display: none;
-  
+
 }
 /* youtube */
 .video{
@@ -230,5 +248,8 @@
     font-weight: bold;;
     padding: 10px 0;
    }
+  }
+  .message {
+    width: 100%;
   }
 }
