--- a/app/views/teachers/help.html.erb
+++ b/app/views/teachers/help.html.erb
@@ -9,10 +9,15 @@
 
  <button id="movieMeetingBtn" class="btn  btn-primary movie_button">面談機能説明 ▼</button>
   <div id="movie_meeting">
-    <h1>sample</h1>
+    <div class="video">
+      <div class="text-center text-danger video-div">
+      <h3>1.面談日時の登録方法について説明します。</h3>
+      </div><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/2iYp4t1Y-8k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
 
- <!--提出機能エリア-->  
+ <!--提出機能エリア-->
   <button id="movieDocumentBtn" class="btn  btn-primary movie_button">提出機能説明 ▼</button>
   <div id="movie_document">
 
@@ -57,9 +62,9 @@
 
 
 
-  
 
-  <!--その他機能エリア-->  
+
+  <!--その他機能エリア-->
   <button id="movieOtherBtn" class="btn  btn-primary movie_button">その他機能説明 ▼</button>
   <div id="movie_other">
     <h1>sample</h1>
@@ -85,7 +90,7 @@
      $('#movie_meeting').slideToggle();
      if(count%2 == 0){
          btn.text('面談機能説明 ▼');
-     }  
+     }
      else{
          btn.text('面談機能説明 ▲');
      }
@@ -96,7 +101,7 @@
      $('#movie_document').slideToggle();
      if(count2%2 == 0){
          btn2.text('提出機能説明 ▼');
-     }  
+     }
      else{
          btn2.text('提出機能説明 ▲');
      }
@@ -107,7 +112,7 @@
      $('#movie_other').slideToggle();
      if(count3%2 == 0){
          btn3.text('その他機能説明 ▼');
-     }  
+     }
      else{
          btn3.text('その他機能説明 ▲');
      }
@@ -115,7 +120,7 @@
   });
 
 </script>
- 
+
 <style>
  body{background-color:#f0f0f0;}
 </style>
