--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -1,7 +1,9 @@
-<h1 id="meeting-top-title">個別連絡</h1>
+<% provide(:title, "個別連絡") %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<h1 id="meeting-top-title" class="message-top">個別連絡</h1>
+
+<div>
+  <div class="message">
     <%= form_with(model: @t_message, url: teacher_t_message_create_path(@teacher), html: {role: 'form', :id => "form_1"}, id: "form_2", local: true) do |f| %>
 
       <%= f.label :title, "タイトル", class: "label-signup" %>
@@ -19,6 +21,12 @@
     <% end %>
   </div>
 </div>
+
+<style>
+body {
+    background: #c1e4e9;
+  }
+</style>
 
 
 <script>
