--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "個別連絡") %>
 
-<h1 id="meeting-top-title" class="message-top">個別連絡</h1>
+<h1 id="meeting-top-title"><i class="fas fa-comments"></i>&nbsp;個別連絡</h1>
 
 <div>
   <div class="message">
@@ -24,7 +24,7 @@
 
 <style>
 body {
-    background: #c1e4e9;
+    background: #a2c2e6;
   }
 </style>
 
