--- a/app/views/teachers/t_message_reply.html.erb
+++ b/app/views/teachers/t_message_reply.html.erb
@@ -1,7 +1,7 @@
 <h1 id="meeting-top-title"><%= @user.name + @user.name2 %>さんへの返信</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div>
+  <div class="message_reply">
     <%= form_with(model: @p_message, url: teacher_t_message_reply_send_path(@teacher, id: @p_message.id), html: {role: 'form', :id => "form_1"}, local: true) do |f| %>
 
       <%= f.label :title, "タイトル", class: "label-signup"%>
@@ -18,6 +18,12 @@
     <% end %>
   </div>
 </div>
+
+<style>
+body {
+    background: #e9dacb;
+  }
+</style>
 
 <script>
 
