ページ別タイトル名

--- a/app/views/teachers/show2.html.erb
+++ b/app/views/teachers/show2.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "保護者詳細") %>
+
 <div id="meeting-top-title">
   <i class="fas fa-user-circle"></i>
   <%= @user.name + @user.name2%><br>
