--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "面談スケジュール調整") %>
+
 <div class="meeting-back2">
   <div id="meeting-top-title">
     <i class="far fa-calendar-check"></i>
