--- a/app/views/meetings/new_user.html.erb
+++ b/app/views/meetings/new_user.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "保護者面談管理") %>
+
 <div class="meeting-back">
   <div id="meeting-top-title"><%= @child.full_name %>さんの<br>面談管理ページ</div>
 
