--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -15,9 +15,9 @@
         <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-bottom: 20px;">
           <thead>
             <tr style="background: #FF9933; color: white;">
-              <td>開始時間</td>
-              <td>面談時間</td>
-              <td>枠</td>
+              <td style="width: 50%;">開始時間</td>
+              <td style="width: 25%;">面談時間</td>
+              <td style="width: 25%;">枠</td>
             </tr>
           </thead>
 
