--- a/app/views/teachers/help.html.erb
+++ b/app/views/teachers/help.html.erb
@@ -66,18 +66,20 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/4-mA6WgBjlU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-
-
   </div>
-
-
-
 
 
   <!--その他機能エリア-->
   <button id="movieOtherBtn" class="btn  btn-primary movie_button">その他機能説明 ▼</button>
   <div id="movie_other">
-    <h1>sample</h1>
+   <!--提出動画1 -->
+    <div class="video">
+      <div class="text-center text-danger video-div">
+       <h3>1.教員と保護者の連絡方についての説明です。</h3>
+      </div><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UzsSDOUTjI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
   </div>
 
 
