--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -58,7 +58,7 @@
 
 }
 .user_link_icon:hover{
-  background-color: cyan;
+  color: cyan;
   text-decoration: none;
 }
 .user_link_icon:visited{
@@ -87,6 +87,28 @@
 
 /* user show */
 /* 生徒登録/編集ページ */
+
+.student_h1{
+  color: blue;
+  font-size: 24px;
+}
+.add_child{
+  background-color: #3399FF;
+  border-radius: 6px;
+  color: #fffeee;
+  font-size: 22px;
+  padding: 1% 19.5%;
+  width: 100%;
+  &:hover{
+    text-decoration: none;
+    background: #87CEFA;
+  }
+}
+.child_edit_table{
+  background: #fff;
+  border-radius: 6px;
+ 
+}
 
 #child-signup {
   text-align: center;
@@ -270,6 +292,29 @@
     margin-bottom: 2%;
     padding-bottom: 1%;
   }
+  /* 生徒登録/編集ページ */
+
+.student_h1{
+  margin-top: 10%;
+}
+#child-signup{
+  margin-top: -3%;
+}
+.add_child{
+  padding: 1.5% 6%;
+  width: 100%;
+  font-size: 18px;
+  margin-top: -1%;
+  &:hover{
+    text-decoration: none;
+    background: #33FFFF;
+  }
+}
+.child_edit_table{
+  background: #fff;
+  td{font-size: 16px;}
+}
+
 
 }
 @media screen and (min-width:566px) and (max-width:767px){
