--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -1,17 +1,40 @@
-<div id="meeting-top-title"><%= @child.full_name %>さんの編集</div>
+<div id="meeting-top-title"> <i class="fas fa-user-graduate"></i>
+<i class="fas fa-pen" style="font-size:16px"></i><%= @child.full_name %>さんの編集</div>
 
-<div class="row">
+<div class="row" style="background:none;">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @child, url: user_users_update2_path(user_id: params[:user_id], child_id: params[:child_id]), local: true) do |f| %>
       <%= render 'shared/child_error_messages' %>
 
-      <%= f.label :name_1, "姓", class: "label-signup" %>
-      <%= f.text_field :name_1, class: "form-control" %>
+      <%= f.label :name_1, "姓", class: "label-signup new_user_label" do %>
+         姓<span style="color:red">&emsp;(*必須です)</span>
+      <% end %>
 
-      <%= f.label :name_2, "名", class: "label-signup" %>
+      <%= f.text_field :name_1, class: "form-control" %>
+        
+      <%= f.label :name_2, "名", class: "label-signup new_user_label" do %>
+        名<span style="color:red">&emsp;(*必須です)</span>
+      <% end %>
       <%= f.text_field :name_2, class: "form-control" %>
 
-      <%= f.submit "更新", class: "btn btn-primary btn-block btn-signup" %>
+      <%= f.submit "更新", class: "btn btn-primary btn-block btn-signup",style:"background:#4689FF" %>
     <% end %>
   </div>
 </div>
+<style>
+ body{
+   background:#fffeee;
+ }
+ .col-md-6{
+   background:#f0f0f0;
+   border-radius:6px;
+   box-shadow:-1px 2px 1px 3px #e0e0e0;
+   padding:2% 6%;
+ }
+ .form-control{
+   margin-bottom:3%;
+ }
+ #meeting-top-title{
+   color:blue;
+ }
+</style>
