--- a/app/views/users/index2.html.erb
+++ b/app/views/users/index2.html.erb
@@ -1,18 +1,38 @@
-<div id="meeting-top-title">生徒さんの編集と登録</div>
+
+<%=provide(:title,"生徒管理") %>
+<div id="meeting-top-title" class="student_h1"><i class="fas fa-user-graduate">&emsp;</i>生徒さんの編集と登録</div>
 
 <div id="child-signup">
-  <%= link_to "生徒さんの登録はこちら", signup_child_path(@user) %>
+  <%= link_to  signup_child_path(@user),class:"add_child" do %>
+    <i class="fas fa-user-graduate"></i>
+    <i class="fas fa-plus" style="font-size:14px;"></i>
+     生徒さんの登録はこちら
+  <% end %>
 </div>
-
-<table class="table meeting-table">
+<div class="col-md-8 col-md-offset-2">
+<table class="table meeting-table child_edit_table">
   <tbody>
     <% @children.each do |child| %>
     <tr style="font-size: 25px;">
       <td>
-        <%= link_to "#{child.full_name}さんの編集", user_users_edit2_path(user_id: @user.id, child_id: child.id) %>
+        <%= link_to  user_users_edit2_path(user_id: @user.id, child_id: child.id) do %>
+           <i class="fas fa-user-graduate"></i>
+           <i class="fas fa-pen" style="font-size:12px"></i>
+            <%= "#{child.full_name}さんの編集" %>
+        <% end %>
+
         | <%= link_to "削除", user_child_destroy_path(user_id: @user.id, child_id: child.id), data: {confirm: "削除しますがよろしいですか？"}, method: :delete, style: "color: red;" %>
       </td>
     </tr>
     <% end %>
   </tbody>
 </table>
+</div>
+<style>
+ body{
+  background:#D9E5FF
+ }
+ .student_h1 {
+   font-size:20px;
+ }
+</style>
