--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -14,8 +14,11 @@
       <%= f.text_area :content, class: "form-control validate[required,maxSize[100]]", style: "height: 100px" %>
 
       <%= f.label :select_user, "送信ユーザー", class: "label-signup" %>
-      <%= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "js-searchable form-control", id: "select_user" } %>
-
+      <%#= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "js-searchable form-control", id: "select_user" } %>
+      <% @users_name.each do |user| %>
+        <%= check_box_tag 't_message[select_user][]', user, checked = false, :id => "select_user" %>
+        <%= user %>
+      <% end %>
 
       <%= f.submit "送信", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
