--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <div class="message">
-    <%= form_with(model: @t_message, url: teacher_t_message_create_path(@teacher), html: {role: 'form', :id => "form_1"}, id: "form_2", local: true) do |f| %>
+    <%= form_with(model: @t_message, url: teacher_t_message_create_path(@teacher), html: {role: 'form', id: "form_1", name: "form1"}, local: true) do |f| %>
 
       <%= f.label :title, "タイトル", class: "label-signup" %>
       <%= f.text_field :title, class: "form-control validate[required,maxSize[20]]" %>
@@ -14,16 +14,19 @@
       <%= f.text_area :content, class: "form-control validate[required,maxSize[100]]", style: "height: 100px" %>
 
       <%= f.label :select_user, "送信ユーザー", class: "label-signup" %>
-      <%#= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "js-searchable form-control", id: "select_user" } %>
       <br>
-      <div class="checkbox">
-        <% @users_name.each do |user| %>
-          <label class="checkbox_label">
-            <%= check_box_tag 't_message[select_user][]', user, checked = false, id: "select_user", class: "checkbox-input" %>
-            <span class="checkbox-parts"><%= user %></span>
-          </label>
-        <% end %>
-      </div>
+      <% if browser.ie? %>
+        <div class="checkbox">
+          <% @users_name.each do |user| %>
+            <label class="checkbox_label">
+              <%= check_box_tag 't_message[select_user][]', user, checked = false, class: "checkbox-input" %>
+              <span class="checkbox-parts"><%= user %></span>
+            </label>
+          <% end %>
+        </div>
+      <% else %>
+        <%= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "js-searchable form-control", id: "select_user" } %>
+      <% end %>
 
       <%= f.submit "送信", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
@@ -95,26 +98,44 @@ body {
     });
   });
 
+  var agent = window.navigator.userAgent.toLowerCase(); //ブラウザ情報取得
 
   $(function() {
 
     // ①submit()に関数をバインド
     $('form').submit(function() {
 
+      if(agent.indexOf('msie') > -1) {
+
+        var flag = false; // 選択されているか否かを判定する変数
+
+        for (var i = 0; i < document.form1.elements.length; i++) {
+
+          // i番目のチェックボックスがチェックされているかを判定
+          if (document.form1.elements[i].checked) {
+            flag = true;
+          }
+        }
+
+        if (!flag) {
+          // 警告を出す
+          alert('送信ユーザーを選択してください。');
+          // 処理を中断
+          return false;
+        }
+
+      }else{
+
         // もしセレクトボックスが空欄だったら…
         if($("#select_user").val() == null) {
-
           // 警告を出す
           alert('送信ユーザーを選択してください。');
 
           // 処理を中断
           return false;
-
-        if($(document.getElementById("#select_user") != null)
-
-          alert('存在しない');
-          return false;
         }
+
+      }
     });
   });
 
