--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= provide(:title,"#{@user.name}さんページ") %>
 <h2 class="user_show_title">
   <div class="user_title-border"><%= @user.name + @user.name2 %>さんの個別ページ</div>
 </h2>
