--- a/app/views/layouts/documents/_select.html.erb
+++ b/app/views/layouts/documents/_select.html.erb
@@ -13,8 +13,8 @@
 <%= form_with(url:selectform_path(@document),local:true) do |f| %>
  <% @document.document_items.order('id asc').each do |item| %>
    <!--　編集の場合の判別パラメーター、登録時は不要 -->
-   <% update_params = @document.answers.last.reply.split(":")[item_count] if @document.answers.count >0 %>
-   <% param = params[:reply].split(":")[item_count].to_s if params[:reply].present? %>
+   <% update_params = @document.answers.last.reply.split(":\t")[item_count] if @document.answers.count >0 %>
+   <% param = params[:reply].split(":\t")[item_count].to_s if params[:reply].present? %>
   
    <% item_count += 1 %>
    <h2 id="document_user_question_h2">
