--- a/app/views/layouts/documents/_input.html.erb
+++ b/app/views/layouts/documents/_input.html.erb
@@ -18,10 +18,10 @@
     <!--未入力処理-->
       <% if params[:reply].nil? %>
         <textarea name="tx<%= count_item %>" class="form-control use_icon" rows="5" placeholder=" &#xf15c; 入力してください"
-          ><%= @document.answers.last.reply.split(":")[count_item] if @document.answers.count > 0 %></textarea>
+          ><%= @document.answers.last.reply.split(":\t")[count_item] if @document.answers.count > 0 %></textarea>
       <% else%>
         <textarea name="tx<%= count_item %>" class="form-control use_icon" rows="5" placeholder=" &#xf15c; 入力してください"
-          ><%= params[:reply].split(":")[count_item] if params[:reply].present? %></textarea> 
+          ><%= params[:reply].split(":\t")[count_item] if params[:reply].present? %></textarea> 
       <% end %> 
     <!--/未入力処理-->  
     <% else %>
