--- a/app/views/teachers/t_message.html.erb
+++ b/app/views/teachers/t_message.html.erb
@@ -24,7 +24,7 @@
           <% end %>
         </div>
       <% else %>
-        <%= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "js-searchable form-control" } %>
+        <%= f.select :select_user, @users_name, { include_hidden: false }, { multiple: true, class: "form-control", id: "js-searchable" } %>
       <% end %>
 
       <%= f.submit "送信", class: "btn btn-primary btn-block btn-signup" %>
@@ -84,19 +84,12 @@ body {
     promptPosition: "topRight: -70" //アラートの吹き出し位置調整
   });
 
-  //-- ブラウザ判定例 --//
-  var agent = window.navigator.userAgent.toLowerCase(); //ブラウザ情報取得
-
-
-  if(agent.indexOf('msie') > -1) {
-  } else {
-    $('.js-searchable').select2({
-      maximumSelectionLength: 5,
-      placeholder: '送信ユーザー選択',
-      language: {
-        maximumSelected: (args) => '一度の送信では最大５人までです。'
-      },
-      allowClear: true
-    });
-  }
+  $("#js-searchable").select2({
+    maximumSelectionLength: 5,
+    placeholder: '送信ユーザー選択',
+    language: {
+      maximumSelected: (args) => '一度の送信では最大５人までです。'
+    },
+    allowClear: true
+  });
 </script>
